# coding_tests

./: .gitignore  BUGS_FOUND_TEMPLATE.md  CHECKLIST.md  CMakeLists.txt  Makefile  README.md  README_INSTALL.md  install-tools.ps1  install-tools.sh  test-build.sh
_teacher/: ANSWER_KEY.md  CMakeLists.txt  FOR_TEACHERS_ONLY.md  Makefile  README.md
_teacher/tests/: cunit.h  test_config_final.c  test_list_final.c  test_main_final.c  test_metrics_final.c  test_protocol_apple_final.c  test_protocol_banana_final.c  test_protocol_carrot_final.c  test_string_utils_final.c  test_text_final.c
include/: config.h  list.h  logger.h  metrics.h  protocol_apple.h  protocol_banana.h  protocol_carrot.h  string_utils.h  text.h
refactor/: .gitignore  BUILD_TEST_SUMMARY.md  COMMANDS.md  PROJECT_OVERVIEW.md  README.md  STRUCTURE.md
refactor/_student/: .gitignore  API_DOCUMENTATION.md  BUGS_FOUND_TEMPLATE.md  CHANGES_REPORT.md  CHECKLIST.md  CMakeLists.txt  Doxyfile  Makefile  TROUBLESHOOTING.md
refactor/_student/include/: logger.h  protocol.h  protocol_apple.h  protocol_banana.h  protocol_carrot.h
refactor/_student/src/: logger.c  main.c
refactor/_student/src/legacy/: config.c  list.c  metrics.c  protocol.c  protocol_apple.c  protocol_banana.c  protocol_carrot.c  text.c
refactor/_student/tests/: cunit.c  test_config.c  test_list.c  test_protocol_apple.c  test_protocol_carrot.c  test_string_utils.c  test_text.c
refactor/_teacher/: .gitignore  ANSWER_KEY.md  CMakeLists.txt  FOR_TEACHERS_ONLY.md  MaintainerNotes.md  Makefile  README.md  compare_results.sh  comparison_report.md  test_comparison.md
refactor/_teacher/answer_key/: API_DOCUMENTATION.md  BUGS_AND_FIXES.md  CMakeLists.txt  CMakeLists_student_test.txt  Doxyfile  Makefile  QUICK_START.md  README.md  SETUP_COMPLETE.md  STRUCTURE.md  SUMMARY.md  TESTING_STUDENTS.md  student_test_config.cmake
refactor/_teacher/answer_key/include/: config.h  list.h  logger.h  metrics.h  protocol_apple.h  protocol_banana.h  protocol_carrot.h  string_utils.h  text.h
refactor/_teacher/answer_key/include/legacy/: protocol_common.h
refactor/_teacher/answer_key/src/: logger.c  main.c
refactor/_teacher/answer_key/src/legacy/: config.c  list.c  metrics.c  protocol_apple.c  protocol_banana.c  protocol_carrot.c  protocol_common.c  string_utils.c  text.c
refactor/_teacher/answer_key/tests/: cunit.h  test_config.c  test_list_final.c  test_main.c  test_main_final.c  test_metrics.c  test_protocol_apple.c  test_protocol_banana.c  test_protocol_banana_final.c
refactor/_teacher/tests/: test_config_final.c  test_metrics_final.c  test_protocol_apple_final.c  test_protocol_carrot_final.c  test_string_utils_final.c  test_text_final.c
src/: logger.c  main.c
src/legacy/: protocol_carrot.c  string_utils.c  text.c
tests/: cunit.c  test_config.c  test_list.c  test_metrics.c  test_protocol_apple.c  test_protocol_banana.c  test_protocol_carrot.c  test_string_utils.c  test_text.c
